[feat] pylint scan workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,15 +4,9 @@ name: code_check
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+  push: # push的时候触发
+    branches: # 那些分支需要触发
+      - master
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -22,24 +16,29 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+        - name: Python Pylin GitHub Action
+          uses: vcoder4c/git_pylint@v3
+            env:
+              DEFAULT_TARGET_BRANCH: master
+    
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: check_action
-      - uses: actions/checkout@v2
-      - name: Setup Python
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.7.4
-          architecture: x64
-      - name: Install flake8 and pylint
-        run: pip install flake8 pylint
-      # Runs a single command using the runners shell
-      - name: check
-        run: |
-          pylint ./polar
-          flake8 ./polar
+      # - name: check_action
+      # - uses: actions/checkout@v2
+      # - name: Setup Python
+      #   uses: actions/setup-python@v1
+      #   with:
+      #     python-version: 3.7.4
+      #     architecture: x64
+      # - name: Install flake8 and pylint
+      #   run: pip install flake8 pylint
+      # # Runs a single command using the runners shell
+      # - name: check
+      #   run: |
+      #     pylint ./polar
+      #     flake8 ./polar
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # # Runs a set of commands using the runners shell
+      # - name: Run a multi-line script
+      #   run: |
+      #     echo Add other actions to build,
+      #     echo test, and deploy your project.
