--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,34 @@
-on: [push]
+# This is a basic workflow to help you get started with Actions
 
+name: code_check
+
+# Controls when the action will run. 
+on:
+  push: # push的时候触发
+    branches: # 那些分支需要触发
+      - master
 jobs:
-  test_job:
+  # This workflow contains a single job called "build"
+  check_code:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    name: A job to run github action
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Run Action Step
-      uses: LakshitF/pylint3-action@master
-      with:
-        filename: './polar'
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: check_action
+      - uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7.4
+          architecture: x64
+      - name: Install flake8 and pylint
+      - uses:
+        run: |
+          pip install flake8 pylint
+          pylint ./polar
+          flake8 ./polar
+      # # Runs a single command using the runners shell
+      # - name: check
+      #   run: |
