--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,25 +10,22 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   check_code:
+    name: check_action
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: check_action
-      - uses: actions/checkout@v2
-      - name: Setup Python
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.7.4
-          architecture: x64
-      - name: Install flake8 and pylint
-      - uses:
+      - name: install python
         run: |
-          pip install flake8 pylint
-          pylint ./polar
-          flake8 ./polar
-      # # Runs a single command using the runners shell
-      # - name: check
-      #   run: |
+          python -V
+          pip -V
+          python3-V
+          pip3 -V
+          apt-get install -y python pip
+          python -V
+          pip -V
+          python3-V
+          pip3 -V
+
