--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: install python
         run: |
+          echo "======check version======"
           python -V
           pip -V
-          python3-V
-          pip3 -V
-          apt-get install -y python pip
-          python -V
-          pip -V
-          python3-V
-          pip3 -V
-
+          echo "======install flake8 pylint======"
+          pip install pylint flake8
+          echo "======check version======"
+          pylint --version
+          flake8 --version
+          echo "======check code======"
+          pylint ./polar
+          flake8 ./polar
